<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar"
        android:title="@string/app_name"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:gravity="top"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.925"
            android:orientation="vertical"
            android:padding="16dp">
            <!-- 输入大框尺寸 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">
                <!-- 大框尺寸设置 -->
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/etBigWidth"
                    android:hint="@string/hint_big_width"
                    android:inputType="number"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/etBigHeight"
                    android:hint="@string/hint_big_height"
                    android:inputType="number"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSetBig"
                    android:text="@string/btn_set_platform_size"/>
            </LinearLayout>
            <!-- 小框尺寸设置 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/etSmallWidth"
                    android:hint="@string/hint_small_width"
                    android:inputType="number"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/etSmallHeight"
                    android:hint="@string/hint_small_height"
                    android:inputType="number"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSetSmall"
                    android:text="@string/btn_set_small_area"/>
            </LinearLayout>

            <!-- 位置控制 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/etPosX"
                    android:hint="@string/hint_pos_x"
                    android:inputType="numberDecimal"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/etPosY"
                    android:hint="@string/hint_pos_y"
                    android:inputType="numberDecimal"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSetPosition"
                    android:text="@string/btn_set_position"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tvSizeInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_big_placeholder"/>

            <TextView
                android:id="@+id/etSizeInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/size_small_placeholder"/>

            <TextView
                android:id="@+id/tvPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/position_placeholder"/>

            <!-- 自定义View -->

            <com.example.opencv.whiteboard.DragBoxView
                android:id="@+id/dragBoxView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saveConstants"
                android:layout_gravity="center"
                android:text="@string/btn_save_to_local"
                android:visibility="gone"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/rg_tab"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.075"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/bottom_button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:layout_weight="0.4"
                android:adjustViewBounds="true"
                android:src="@drawable/home_icon"
                android:background="@null"
                android:onClick="mainPage"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/bottom_button2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginVertical="0dp"
                android:layout_weight="0.2"
                android:adjustViewBounds="true"
                android:src="@drawable/add_icon"
                android:background="@null"
                android:onClick="editImage"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/bottom_button3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:layout_weight="0.4"
                android:adjustViewBounds="true"
                android:src="@drawable/goback_icon"
                android:background="@null"
                android:onClick="goBack"
                android:scaleType="fitCenter" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
